--- a/DE NEW/Student/student.html
+++ b/DE NEW/Student/student.html
@@ -26,9 +26,9 @@
         </div>
         <ul class="ham_active">
           <li><a href="/" class="active">Home</a></li>
-          <li><a href="../Check Records/Records.html">Check Records</a></li>
-          <li><a href="/Student/student.html">Generate QR-Code</a></li>
-          <li><a href="/">LogOut</a></li>
+          <li><a href="/Check Records/Records.html">Check Records</a></li>
+          <li><a href="../Student/student.html">Generate QR-Code</a></li>
+          <li><a href="/"">LogOut</a></li>
           <li><a href="../form/index.html" class="btn">Login</a></li>
         </ul>
 
