--- a/DE NEW/faculty/Faculty.html
+++ b/DE NEW/faculty/Faculty.html
@@ -25,10 +25,10 @@
         </div>
         <ul class="ham_active">
           <li><a href="/" class="active">Home</a></li>
-          <li><a href="">Scan Now</a></li>
+          <li><a href="../Scanner/index.html">Scan Now</a></li>
           <li><a href="../Check Records/Records.html">Check Records</a></li>
-          <li><a href="/">LogOut</a></li>
-          <li><a href="../form/index.html" class="btn">Login</a></li>
+          <li><a href="../Home/Index.html">LogOut</a></li>
+          <li><a href="../form/fac-form.html" class="btn">Login</a></li>
         </ul>
 
         <div class="hamburger">
@@ -70,7 +70,8 @@
           <label for="date">Select Date <input type="date" id="date" /></label>
           <label for="time">Select Time <input type="time" id="time" /></label>
 
-          <button type="submit" class="btn-submit">Scan Now</button>
+          <!-- <button type="submit" class="btn-submit">Scan Now</button> -->
+          <button class="btn-submit"><a href="../Scanner/index.html">Scan Now</a></button>
         </div>
       </div>
     </div>
