--- a/DE/Check Records/Records.html
+++ b/DE/Check Records/Records.html
@@ -12,6 +12,10 @@
     <main class="table">
       <section class="table__header">
         <h1>Attendence Records</h1>
+        <div class="input-group">
+          <input type="search" placeholder="Search Data..." />
+          <img src="search.png" alt="" />
+        </div>
         <div class="export__file">
           <label
             for="export-file"
