--- a/DE/Student/student.html
+++ b/DE/Student/student.html
@@ -20,7 +20,7 @@
       <nav>
         <div class="logo">
           <img
-            src="./natures-beauty-reflected-tranquil-mountain-waters-generative-ai.jpg"
+            src="../19479982c0064d08bb49d68c84084140.png"
             alt="logo"
           />
         </div>
