--- a/faculty/Faculty.html
+++ b/faculty/Faculty.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Faculty Page</title>
-    <link rel="stylesheet" href="Faculty.css" />
+    <link rel="stylesheet" href="faculty.css" />
     <link rel="stylesheet" href="../Navbar-Fac/nav.css" />
     <link
       rel="stylesheet"
